--- a/cv.tex
+++ b/cv.tex
@@ -26,7 +26,7 @@ ORCID: 0000-0003-0962-8550
     Postdoctoral researcher \\
 
     2022 - \enspace \dots &
-    \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
+    \textbf{Universitat Politècnica de Catalunya (UPC)} - School of Civil Engineering \newline
     Adjunct lecturer \\ 
 
     2022 - 2025 &
@@ -55,29 +55,29 @@ ORCID: 0000-0003-0962-8550
 \end{tabularx}
 
 
-\section{Languages}
-Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
-
-
 \section{CV Summary}
-Perfil Profesional Ingeniero de Caminos y Doctor en Mecánica Computacional con una sólida trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
+Ingeniero de Caminos y Doctor en Mecánica Computacional con una sólida trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
 Experto en cerrar la brecha entre la teoría numérica y la aplicación industrial, con dominio de C++, Python, .NET y APIs de BIM.
 
 Como Responsable de Desarrollo e Innovación en SOCOTEC, lideré la automatización de procesos de diseño y la interconectividad entre modelos de cálculo y BIM.
 Mi formación doctoral en métodos numéricos (FEM, interacción fluido-estructura) me permite abordar problemas complejos de simulación física desde el código fuente hasta la solución práctica.
 Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para nuevos materiales (polímeros electroactivos), busco aplicar mi capacidad técnica en entornos de desarrollo de software de ingeniería de alto nivel.
 
-% After he graduated in civil engineering and a period studying philosophy and theology in Rome, he began
-% a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
-% research with work for social purposes at the Montseny Foundation.
 
-% During his research period at CIMNE, he worked on the stabilization of finite elements for hyperbolic
-% differential equations, focusing on numerical implementation, multi-physics coupling, and multi-scale
-% resolution. These developments have been successfully applied to various projects.
-
-% Working in structural engineering consultancy at SOCOTEC, he was involved in RDI projects, the Wind\&Fire
-% department, and the analysis of complex structures, focusing on dynamic effects. He is now working at CIMNE
-% as a postdoctoral researcher, developing formulations for Electro-Active-Polymers (EAPs).
+\section{Core competencies \& technical skills}
+\begin{description}
+    % \itemsep=-.3em
+    \item[Advanced simulation \& physics]
+        \emph{Computational mechanics}: Expertise in FEM, CFD, Particle-methods, Stabilization of hyperbolic equations.
+        \emph{Structural analysis}: Vibration assessment, Disproportional collapse, CFD for Fire/Wind engineering, non-linear structural analysis.
+        \emph{Ocean \& coastal}: Shallow water equations modelling, landslide-generated waves simulation.
+    \item[Scientific programming \& automation]
+        \emph{Languages}: C++ (high-performance solvers), Python \& Julia (Data processing/Scripting), C\# / .NET (Windows ecosystem).
+        \emph{Plattforms}: Windows, Linux.
+        \emph{BIM development}: Advanced interoperability using Revit API and Robot Structural Analysis API.
+        \emph{Version control}: Git, CI/CD workflows.
+    \item[Languages] Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
+\end{description}
 
 
 \section{Publications}
@@ -114,8 +114,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
     Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
     Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
-    Dates: 16/10/2024 - 13/11/2024
-}
+    Dates: 16/10/2024 - 13/11/2024}
 
 
 \section{Participation in industry projects}
@@ -125,35 +124,36 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 \parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
     \emph{Reto}: Evaluación de dinámica estructural para una atracción de "teatro volador" (Flying Theatre) en un rascacielos de diseño singular. \newline
-    \emph{Solución}: Realicé el análisis avanzado de vibraciones para garantizar el cumplimiento de estrictos límites de servicio (SLS) y confort humano bajo cargas dinámicas.
-}
+    \emph{Solución}: Realicé el análisis avanzado de vibraciones para garantizar el cumplimiento de estrictos límites de servicio (SLS) y confort humano bajo cargas dinámicas.}
 
 \parbox{\linewidth}{
     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
     \emph{Retos}: Diseño de infraestructura crítica sanitaria con requisitos estrictos de aislamiento y seguridad ante accidentes. \newline
-    \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.
-}
+    \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.}
 
 \subsection{Multiphysics ans forensic analysis}
 
 \parbox{\linewidth}{
-    Investigación Forense y Multifísica (Varios Proyectos) \newline
-    Análisis Termo-mecánico (2023) SOCOTEC Francia: Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas. \newline
-    Monasterio de Pedralbes (2024) Patrimonio: Análisis forense de patologías mediante modelado numérico de la propagación de grietas y diseño de propuestas correctivas para la estabilización de la cúpula histórica (S. XV). \newline
-    Residencial Torre Garellano (2025) Arup: Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.
-}
+    Análisis Termo-mecánico (2023) SOCOTEC Francia \newline
+    Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas.}
+
+\parbox{\linewidth}{
+    Monasterio de Pedralbes (2024) Patrimonio \newline
+    Análisis forense de patologías mediante modelado numérico de la propagación de grietas y diseño de propuestas correctivas para la estabilización de la cúpula histórica (S. XV).}
+
+\parbox{\linewidth}{
+    Residencial Torre Garellano (2025) Arup \newline
+    Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.}
 
 \subsection{Computational Design \& BIM Automation (R\&D)}
 
 \parbox{\linewidth}{
     Head of Development \& Innovation (2022-2025) SOCOTEC Spain - Buildings \& cities \newline
-    Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.
-}
+    Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.}
 
 \parbox{\linewidth}{
     Consultor externo (2024 - 2025) Hormipresa \newline
-    Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.
-}
+    Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.}
 
 % \parbox{\linewidth}{
 %     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
@@ -202,16 +202,6 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 % \parbox{\linewidth}{
 %     BIM developments (2025) Hormipresa \newline
 %     Development of an automated process for reviewing lifting assemblies.}
-
-
-\section{Miscellaneous}
-\begin{itemize}
-    \itemsep=-.3em
-    \item \textbf{Skills:} Computational Mechanics, Fire Engineering, Ocean Engineering, Vibration Assessment
-    \item \textbf{Programming:} C++, Python, Julia, C\#, .NET, Git
-    \item \textbf{Tools:} Robot Structural Analysis API, Revit API
-    \item \textbf{Miscellaneous:} ENVISION Sustainability Professional 2023-2024
-\end{itemize}
 
 
 \end{document}
