reorder impact of sections, added highlight keyword

--- a/cv.bib
+++ b/cv.bib
@@ -11,13 +11,14 @@
 }
 
 @article{maso2022b,
-  author  = {Masó, Miguel and Franci, Alessandro and De-Pouplana, Ignasi and Cornejo, Alejandro and Oñate, Eugenio},
-  year    = {2022},
-  month   = {07},
-  pages   = {2213-7467},
-  journal = {Advanced Modeling and Simulation in Engineering Sciences},
-  title   = {A Lagrangian-Eulerian procedure for the coupled solution of the Navier-Stokes and shallow water equations for landslide-generated waves},
-  doi     = {10.1186/s40323-022-00225-9}
+  author   = {Masó, Miguel and Franci, Alessandro and De-Pouplana, Ignasi and Cornejo, Alejandro and Oñate, Eugenio},
+  year     = {2022},
+  month    = {07},
+  pages    = {2213-7467},
+  journal  = {Advanced Modeling and Simulation in Engineering Sciences},
+  title    = {A Lagrangian-Eulerian procedure for the coupled solution of the Navier-Stokes and shallow water equations for landslide-generated waves},
+  doi      = {10.1186/s40323-022-00225-9},
+  keywords = {highlight}
 }
 
 @article{pouplana2023,
@@ -30,7 +31,6 @@
   issn     = {1309-1042},
   doi      = {10.1016/j.apr.2023.101668},
   author   = {Ignasi De-Pouplana and Salvador Latorre and Miguel Masó and Cristina Alonso and Eva Pérez and Xavier Guinart and Isabel Hernández and Xavier Baulies and Eugenio Oñate},
-  keywords = {NO urban pollution, Micro-scale, 2.5D model, Traffic, Finite element method}
 }
 
 @article{puigferrat2021,
@@ -49,34 +49,8 @@
   title       = {Coupling shallow water models with three-dimensional models for the study of fluid-structure interaction problems using the particle finite element method},
   institution = {Universitat Politècnica de Catalunya},
   school      = {Barcelona School of Civil Engineering},
-  year        = {2022}
-}
-
-@inproceedings{proc:maso2019,
-  author    = {Maso, M. and De-Pouplana, I. and Oñate, E.},
-  title     = {Coupling shallow water models with 3D models for the study of fluid-structure interaction problems using the particle finite element method},
-  booktitle = {Particles 2019 - VI International Conference on Particle-based Methods},
-  year      = {2019},
-  address   = {Barcelona, Spain},
-  timestamp = {2019.10.29}
-}
-
-@inproceedings{proc:maso2022,
-  author    = {Maso, M. and Franci, A. and De-Pouplana, I. and Cornejo, A. and Oñate, E.},
-  title     = {A one-way coupled Lagrangian-Eulerian procedure for the solution of landslide-generated waves},
-  booktitle = {WCCM APCOM - 15th World Congress on Computation Mecchanics \& 8th Asian Pacific Congress on Computation Mechanics},
-  year      = {2022},
-  address   = {Yokohama, Japan (Virtual)},
-  timestamp = {2022.08.31}
-}
-
-@inproceedings{proc:maso2022b,
-  author    = {Maso, M. and Franci, A. and De-Pouplana, I. and Cornejo, A. and Oñate, E.},
-  title     = {Un Procedimiento Lagrangiano-Euleriano para la Solución Acoplada de las Ecuaciones de Navier-Stokes y Aguas Poco Profundas para Olas Generadas por Deslizamientos de Laderas},
-  booktitle = {CMN XV - Congress on Numerical Methods Engineering},
-  year      = {2022},
-  address   = {Las Palmas de Gran Canaria, Spain},
-  timestamp = {2022.10.13}
+  year        = {2022},
+  keywords    = {highlight}
 }
 
 @article{montanino2025,
@@ -88,7 +62,34 @@
   issn     = {1007-5704},
   doi      = {https://doi.org/10.1016/j.cnsns.2025.108845},
   author   = {Andrea Montanino and Miguel Masó Sotomayor and Alessandro Franci},
-  keywords = {PFEM, Boussinesq, Shallow-water, One-way coupling, Wave impact, Risk assessment},
+  keywords = {highlight},
+}
+
+@inproceedings{proc:maso2019,
+  author    = {Maso, M. and De-Pouplana, I. and Oñate, E.},
+  title     = {Coupling shallow water models with 3D models for the study of fluid-structure interaction problems using the particle finite element method},
+  booktitle = {Particles 2019 - VI International Conference on Particle-based Methods},
+  year      = {2019},
+  address   = {Barcelona, Spain},
+  timestamp = {2019.10.29},
+}
+
+@inproceedings{proc:maso2022,
+  author    = {Maso, M. and Franci, A. and De-Pouplana, I. and Cornejo, A. and Oñate, E.},
+  title     = {A one-way coupled Lagrangian-Eulerian procedure for the solution of landslide-generated waves},
+  booktitle = {WCCM APCOM - 15th World Congress on Computation Mecchanics \& 8th Asian Pacific Congress on Computation Mechanics},
+  year      = {2022},
+  address   = {Yokohama, Japan (Virtual)},
+  timestamp = {2022.08.31},
+}
+
+@inproceedings{proc:maso2022b,
+  author    = {Maso, M. and Franci, A. and De-Pouplana, I. and Cornejo, A. and Oñate, E.},
+  title     = {Un Procedimiento Lagrangiano-Euleriano para la Solución Acoplada de las Ecuaciones de Navier-Stokes y Aguas Poco Profundas para Olas Generadas por Deslizamientos de Laderas},
+  booktitle = {CMN XV - Congress on Numerical Methods Engineering},
+  year      = {2022},
+  address   = {Las Palmas de Gran Canaria, Spain},
+  timestamp = {2022.10.13},
 }
 
 @project{sgr2021,
@@ -96,7 +97,7 @@
   financing = {AGAUR. Agència de Gestió d’Ajuts Universitaris i de Recerca},
   from      = {01/01/2022},
   to        = {30/06/2025},
-  pi        = {Cervera Ruiz, Luis Miguel}
+  pi        = {Cervera Ruiz, Luis Miguel},
 }
 
 @project{dpi2015,
@@ -104,7 +105,7 @@
   financing = {MINECO},
   from      = {01/01/2016},
   to        = {31/12/2018},
-  pi        = {Codina, Ramon; Baiges, Joan}
+  pi        = {Codina, Ramon; Baiges, Joan},
 }
 
 @project{fp72013,
@@ -112,5 +113,5 @@
   financing = {EC},
   from      = {01/01/2014},
   to        = {31/12/2017},
-  pi        = {Larese de Tetto, Antonia}
+  pi        = {Larese de Tetto, Antonia},
 }
