--- a/cv.sty
+++ b/cv.sty
@@ -37,3 +37,5 @@
 
 \setlength\bibitemsep{8pt} % space between bib entries
 \setlength\bibhang{0pt} % removing indentation
+
+\nocite{*} % Allow printing all bib items, even if not cited
