--- a/cv.tex
+++ b/cv.tex
@@ -19,42 +19,6 @@ ORCID: 0000-0003-0962-8550
 \end{tabularx}
 
 
-\section{Employment history}
-\begin{tabularx}{\linewidth}{lX}
-    2025 - \enspace \dots &
-    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
-    Postdoctoral researcher \\
-
-    2022 - \enspace \dots &
-    \textbf{Universitat Politècnica de Catalunya (UPC)} - School of Civil Engineering \newline
-    Adjunct lecturer \\ 
-
-    2022 - 2025 &
-    \textbf{SOCOTEC Spain} - Buildings and cities \newline
-    Specialist Engineer, Head of Development and Innovation \\
-
-    2017 - 2022 &
-    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
-    PhD Candidate (FPI Fellowship) \\
-\end{tabularx}
-
-
-\section{Education}
-\begin{tabularx}{\linewidth}{lX}
-    2017 - 2022 &
-    \textbf{PhD in Civil Engineering} \newline
-    UPC, Barcelona, Spain \\
-
-    2013 - 2015 &
-    \textbf{Bachelor's degree in Philosophy and Theology} \newline
-    Pontificia Universtià della Santa Croce, Rome, Italy \\
-
-    2007 - 2013 &
-    \textbf{Ingeniero de Caminos, Canales y Puertos} (equivalent to MSc in Civil Engineering) \newline
-    UPC, Barcelona, Spain \\
-\end{tabularx}
-
-
 \section{CV Summary}
 Ingeniero de Caminos y Doctor en Mecánica Computacional con una sólida trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
 Experto en cerrar la brecha entre la teoría numérica y la aplicación industrial, con dominio de C++, Python, .NET y APIs de BIM.
@@ -80,47 +44,29 @@ Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para 
 \end{description}
 
 
-\section{Publications}
-\nocite{*}
-\printbibliography[heading={subbibliography}, title={Journal papers}, type=article]
-\printbibliography[heading={subbibliography}, title={Theses}, type=thesis]
-\printbibliography[heading={subbibliography}, title={Conferences}, type=inproceedings]
-
-
-\section{Stays and other activities}
-\textbf{Visiting researcher, Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
-TCAiNMaND-PIRSES-GA-2013-612607 Numerical Methods for Real Time Computations Research on stabilized
-formulations the Finite Element Method applied to hyperbolic conservation laws. 18/07/2017 - 19/10/2017.
-
-
-\section{Teaching activities}
+\section{Employment history}
 \begin{tabularx}{\linewidth}{lX}
+    2025 - \enspace \dots &
+    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
+    Postdoctoral researcher \\
+
     2022 - \enspace \dots &
-    \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
+    \textbf{Universitat Politècnica de Catalunya (UPC)} - School of Civil Engineering \newline
+    Adjunct lecturer \\ 
 
-    2022 - 2022 &
-    \textbf{Structural Analysis.} Credits: 7'5. Degree: Master's degree in Civil Engineering. UPC. \\
+    2022 - 2025 &
+    \textbf{SOCOTEC Spain} - Buildings and cities \newline
+    Specialist Engineer, Head of Development and Innovation \\
 
-    2017 - 2017 &
-    \textbf{Numerical Methods.} Credits: 6. Degree: Bachelor's degree in Materials Engineering. UPC. \\
+    2017 - 2022 &
+    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
+    PhD Candidate (FPI Fellowship) \\
 \end{tabularx}
 
 
-\printbibliography[heading={bibintoc}, title={Participation in R+D+i projects}, type=project]
-
-
-\section{Divulgation activities}
-\parbox{\linewidth}{
-    Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
-    Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
-    Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
-    Dates: 16/10/2024 - 13/11/2024}
-
-
-\section{Participation in industry projects}
+\section{Selected industry projects}
 
 \subsection{Advanced Structural Analysis \& Complex Dynamics}
-
 \parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
     \emph{Reto}: Evaluación de dinámica estructural para una atracción de "teatro volador" (Flying Theatre) en un rascacielos de diseño singular. \newline
@@ -132,7 +78,6 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.}
 
 \subsection{Multiphysics ans forensic analysis}
-
 \parbox{\linewidth}{
     Análisis Termo-mecánico (2023) SOCOTEC Francia \newline
     Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas.}
@@ -146,7 +91,6 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.}
 
 \subsection{Computational Design \& BIM Automation (R\&D)}
-
 \parbox{\linewidth}{
     Head of Development \& Innovation (2022-2025) SOCOTEC Spain - Buildings \& cities \newline
     Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.}
@@ -155,53 +99,60 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     Consultor externo (2024 - 2025) Hormipresa \newline
     Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.}
 
-% \parbox{\linewidth}{
-%     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
-%     Structural design;
-%     Robustness assessment against disproportional collapse;
-%     Vibration assessment for isolation of medical equipment.}
 
-% \parbox{\linewidth}{
-%     Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
-%     Structural design.}
+\printbibliography[heading={bibintoc}, title={Participation in R+D+i projects}, type=project]
 
-% \parbox{\linewidth}{
-%     Étude de mode de ruine de six bâtiments industriels (2023) SOCOTEC-France \newline
-%     CFD analysis of fire;
-%     Structural analysis of thermo-plastic deformations.}
 
-% \parbox{\linewidth}{
-%     Anàlisi de patologia de la cúpula de la sala capitular del monestir de Pedralbes (2023) ICUB \newline
-%     Forensic analysis of crack propagation.}
+\section{Education}
+\begin{tabularx}{\linewidth}{lX}
+    2017 - 2022 &
+    \textbf{PhD in Civil Engineering} \newline
+    UPC, Barcelona, Spain \\
 
-% \parbox{\linewidth}{
-%     Mercury Tower, Malta (2024) Zaha Hadid \newline
-%     Vibration assessment on serviceability limits for a flying theatre.}
+    2013 - 2015 &
+    \textbf{Bachelor's degree in Philosophy and Theology} \newline
+    Pontificia Universtià della Santa Croce, Rome, Italy \\
 
-% \parbox{\linewidth}{
-%     Proposta correctiva a la cúpula de la sala capitular del monestir de Pedralbes (2024) ICUB \newline
-%     Structural design.}
+    2007 - 2013 &
+    \textbf{Ingeniero de Caminos, Canales y Puertos} (equivalent to MSc in Civil Engineering) \newline
+    UPC, Barcelona, Spain \\
+\end{tabularx}
 
-% \parbox{\linewidth}{
-%     Hotel Puerto Málaga (2024) b720 \newline
-%     Structural analysis;
-%     Deep foundation design.}
 
-% \parbox{\linewidth}{
-%     Bridges on new Genome Campus, Hinxton (2025) Evolve \newline
-%     Revision and assessment of structural design.}
+\section{Selected publications}
+\textit{Full list available on ORCID: 0000-0003-0962-8550}
+\printbibliography[heading=none, keyword=highlight]
+% \section{Publications}
+% \printbibliography[heading={subbibliography}, title={Journal papers}, type=article]
+% \printbibliography[heading={subbibliography}, title={Theses}, type=thesis]
+% \printbibliography[heading={subbibliography}, title={Conferences}, type=inproceedings]
 
-% \parbox{\linewidth}{
-%     Residencial Torre Garellano (2025) Arup \newline
-%     CFD Analysis of wind loads on facade.}
 
-% \parbox{\linewidth}{
-%     BIM developments internal project (2023-2025) SOCOTEC-Spain \newline
-%     Interconnectivity and automation processes of BIM modelling from calculation models.}
+\section{Stays, teaching \& divulgation}
 
-% \parbox{\linewidth}{
-%     BIM developments (2025) Hormipresa \newline
-%     Development of an automated process for reviewing lifting assemblies.}
+\subsection{Stays}
+\textbf{Visiting researcher, Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
+TCAiNMaND-PIRSES-GA-2013-612607 Numerical Methods for Real Time Computations Research on stabilized
+formulations the Finite Element Method applied to hyperbolic conservation laws. 18/07/2017 - 19/10/2017.
+
+\subsection{Teaching activities}
+\begin{tabularx}{\linewidth}{lX}
+    2022 - \enspace \dots &
+    \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
+
+    2022 - 2022 &
+    \textbf{Structural Analysis.} Credits: 7'5. Degree: Master's degree in Civil Engineering. UPC. \\
+
+    2017 - 2017 &
+    \textbf{Numerical Methods.} Credits: 6. Degree: Bachelor's degree in Materials Engineering. UPC. \\
+\end{tabularx}
+
+\subsection{Divulgation activities}
+\parbox{\linewidth}{
+    Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
+    Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
+    Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
+    Dates: 16/10/2024 – 13/11/2024; \hspace{2pt} 29/09/2025 – 03/11/2025}
 
 
 \end{document}
