refactor stays and other activities

--- a/cv.tex
+++ b/cv.tex
@@ -3,6 +3,8 @@
 \usepackage[english]{babel}
 \usepackage{cv}
 
+\usepackage{fontawesome5}
+
 \addbibresource{cv.bib}
 
 \author{Miguel Masó, PhD}
@@ -15,7 +17,7 @@
 Chartered Civil Engineer, Nº 36285\\[-.2em]
 City: Barcelona (08006) &
 Birth date: 9/4/1989 &
-ORCID: 0000-0003-0962-8550    
+\faLinkedin \ \href{https://www.linkedin.com/in/miguel-maso/}{linkedin.com/in/miguel-maso} \\[-.2em]   
 \end{tabularx}
 
 
@@ -120,7 +122,7 @@ Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para 
 
 
 \section{Selected publications}
-\textit{Full list available on ORCID: 0000-0003-0962-8550}
+\textit{Full list available on ORCID: \href{https://orcid.org/0000-0003-0962-8550}{0000-0003-0962-8550}}
 \printbibliography[heading=none, keyword=highlight]
 % \section{Publications}
 % \printbibliography[heading={subbibliography}, title={Journal papers}, type=article]
@@ -128,31 +130,37 @@ Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para 
 % \printbibliography[heading={subbibliography}, title={Conferences}, type=inproceedings]
 
 
-\section{Stays, teaching \& divulgation}
+\section{Academic and professional activities}
+\begin{itemize}
+    \item \textbf{University teaching} (2017 - present): Adjunct Lecturer at UPC (Barcelona School of Civil Engineering). Subjects: Structural Dynamics (Master's Degree) and Numerical Methods (Bachelor's Degree)
+    \item \textbf{International Research Stays}: Visiting Researcher at CIMAT (Mexico). Research on stabilized formulations for hyperbolic conservation laws (2017)
+    \item \textbf{Industry Outreach}: Speaker at the Association of Structural Consultants (ACE) on "Structural Sustainability and Decarbonization Criteria" (2024, 2025)
+\end{itemize}
 
-\subsection{Stays}
-\textbf{Visiting researcher, Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
-TCAiNMaND-PIRSES-GA-2013-612607 Numerical Methods for Real Time Computations Research on stabilized
-formulations the Finite Element Method applied to hyperbolic conservation laws. 18/07/2017 - 19/10/2017.
 
-\subsection{Teaching activities}
-\begin{tabularx}{\linewidth}{lX}
-    2022 - \enspace \dots &
-    \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
+% \section{Stays}
+% \textbf{Visiting researcher, Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
+% TCAiNMaND-PIRSES-GA-2013-612607 Numerical Methods for Real Time Computations Research on stabilized
+% formulations the Finite Element Method applied to hyperbolic conservation laws. 18/07/2017 - 19/10/2017.
 
-    2022 - 2022 &
-    \textbf{Structural Analysis.} Credits: 7'5. Degree: Master's degree in Civil Engineering. UPC. \\
+% \section{Teaching activities}
+% \begin{tabularx}{\linewidth}{lX}
+%     2022 - \enspace \dots &
+%     \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
 
-    2017 - 2017 &
-    \textbf{Numerical Methods.} Credits: 6. Degree: Bachelor's degree in Materials Engineering. UPC. \\
-\end{tabularx}
+%     2022 - 2022 &
+%     \textbf{Structural Analysis.} Credits: 7'5. Degree: Master's degree in Civil Engineering. UPC. \\
 
-\subsection{Divulgation activities}
-\parbox{\linewidth}{
-    Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
-    Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
-    Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
-    Dates: 16/10/2024 – 13/11/2024; \hspace{2pt} 29/09/2025 – 03/11/2025}
+%     2017 - 2017 &
+%     \textbf{Numerical Methods.} Credits: 6. Degree: Bachelor's degree in Materials Engineering. UPC. \\
+% \end{tabularx}
+
+% \section{Divulgation activities}
+% \parbox{\linewidth}{
+%     Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
+%     Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
+%     Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
+%     Dates: 16/10/2024 – 13/11/2024; \hspace{2pt} 29/09/2025 – 03/11/2025}
 
 
 \end{document}
