second compilation, should be faster

--- a/cv.sty
+++ b/cv.sty
@@ -11,7 +11,7 @@
 \RequirePackage[colorlinks=true, allcolors=black]{hyperref}
 \RequirePackage{csquotes} % support for quotes depending language
 
-\renewcommand{\sfdefault}{qhv} % TeX Gyre Heros (Helvetica-like)
+\renewcommand{\sfdefault}{qhv} % TeX Gyre Heros (Helvetica-like, better support than phv)
 
 \titleformat{\section}{\fontfamily{qhv}\large\bfseries}{}{0em}{}[\titlerule] % Section title format
 \titleformat{\subsection}{\fontfamily{qhv}\normalsize\bfseries}{}{0em}{} % Subsection title format
