--- a/cv-es.tex
+++ b/cv-es.tex
@@ -47,36 +47,86 @@ ORCID: 0000-0003-0962-8550
 \end{tabularx}
 
 
-\section{Idiomas}
-Español nativo - Catalán nativo - C1 Inglés - B1 Italiano
-
-
 \section{Resumen}
-Miguel Masó Sotomayor (en adelante, el candidato) es Ingeniero de Caminos por la Universidad Politécnica de Catalunya (UPC) desde el año 2013. Tras terminar los estudios de ingeniería, estuvo un periodo de dos años en Roma, realizando estudios de Filosofía y Teología en la Universidad Pontificia de la Santa Cruz. Tras su regreso a Barcelona, comenzó un doctorado en Ingeniería Civil en CIMNE, empezando el año 2017 y a tiempo parcial. Durante esos años, combinó la academia con actividades de propósito social en la Fundación Montseny. Más adelante, el 2019 obtuvo una beca de Formación de Personal Investigador (FPI) y cambió la dedicación a tiempo completo. Defendió la tesis en septiembre de 2022.
+Ingeniero de Caminos y Doctor en Mecánica Computacional con una trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
+Con experiencia en cerrar la brecha entre la teoría numérica y la aplicación industrial, con dominio de C++, Python, .NET y APIs de BIM.
 
-Ha impartido clases en cinco cursos académicos. Comenzó como profesor asociado el curso académico 2017-2018 en la asignatura de Métodos Numéricos en la Escuela de Ingeniería de Barcelona Este (EEBE). Por compatibilidad con las diversas actividades, pospuso la docencia hasta el curso 2021-2022, donde colaboró en las asignaturas de Análisis de Estructuras y de Ingeniería de Estructuras en el Máster de Ingeniería Estructural y de la Construcción. El curso 2022-2023, como profesor asociado, también impartió clases en estas asignaturas. Desde ese mismo curso, también como profesor asociado, ha impartido clases en la asignatura de Dinámica de Estructuras. La docencia, según la asignatura, ha sido en catalán, castellano o inglés. En la actualidad, sigue dando clases de Dinámica de Estructuras.
+Como Responsable de Desarrollo e Innovación en SOCOTEC, lideré la automatización de procesos de diseño y la interconectividad entre modelos de cálculo y BIM.
+Mi formación doctoral en métodos numéricos (FEM, interacción fluido-estructura) me permite abordar problemas complejos de simulación física desde el código fuente hasta la solución práctica.
+Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para nuevos materiales (polímeros electroactivos), busco aplicar mi capacidad técnica en entornos de desarrollo de software de ingeniería de alto nivel.
 
-La temática del doctorado fue la estabilización de formulaciones de elementos finitos (FEM) para ecuaciones diferenciales hiperbólicas, en concreto, las ecuaciones de aguas poco profundas. Los trabajos llevados a cabo pusieron énfasis en la convergencia espacial y temporal, acoplamiento multifísico y la resolución multiescala. Encontró aplicación en el proyecto PiPlates, como motor de cálculo para la predicción de concentración de óxidos de nitrógeno en ambientes urbanos. Adicionalmente, también exploró otras formulaciones como el método de elementos finitos de partículas (PFEM), tanto en la versión de malla fija como de malla móvil. Estos desarrollos se emplearon para el estudio acoplado de propagación de tsunamis originados por deslizamientos de ladera sobre bahías y lagos. Estas investigaciones se publicaron en cuatro artículos en revistas indexadas, además de otro artículo en curso. También presentó las investigaciones en diversos congresos.
 
-Implementó las formulaciones investigadas en el software de elementos finitos KratosMultiphysics, un proyecto \emph{open-source} escrito en los lenguajes de programación C++ y Python. Fue miembro del comité de implementación de dicho proyecto. Esta fue una oportunidad para colaborar con miembros de \emph{Chair of Structural Analysis} de \emph{Technical University of Munich} (TUM) sobre amortiguadores de masa líquidos, aplicando conocimientos de la tesis.
+\section{Core competencies \& technical skills}
+\begin{description}
+    % \itemsep=-.3em
+    \item[Advanced simulation \& physics]
+        \emph{Computational mechanics}: Expertise in FEM, CFD, Particle-methods, Stabilization of hyperbolic equations.
+        \emph{Structural analysis}: Vibration assessment, Disproportional collapse, CFD for Fire/Wind engineering, non-linear structural analysis.
+        \emph{Ocean \& coastal}: Shallow water equations modelling, landslide-generated waves simulation.
+    \item[Scientific programming \& automation]
+        \emph{Languages}: C++ (high-performance solvers), Python \& Julia (Data processing/Scripting), C\# / .NET (Windows ecosystem).
+        \emph{Plattforms}: Windows, Linux.
+        \emph{BIM development}: Advanced interoperability using Revit API and Robot Structural Analysis API.
+        \emph{Version control}: Git, CI/CD workflows.
+    \item[Languages] Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
+\end{description}
 
-Desde octubre de 2022 trabaja en el departamento de proyectos de estructuras en el área de edificación de SOCOTEC. Es ingeniero especialista y responsable de innovación y desarrollo. Durante este tiempo ha participado en diversos proyectos de ingeniería de viento y fuego. Los principales proyectos de viento han estado orientados al cálculo de presiones estáticas y dinámicas del viento en estructuras. Los proyectos de fuego, orientados a la caracterización de acciones térmicas y resistencia estructural, considerando la degradación elástica y plástica de los materiales, tanto para situaciones de proyecto, como estudios forenses. Los conocimientos de mecánica computacional han sido de interés para el análisis y rehabilitación de edificios históricos como el Monasterio de Pedralbes, ante la situación de fisuración. Por otro lado, los conocimientos de dinámica estructural han sido de interés para el análisis de vibraciones en diversos proyectos, tanto de pasarelas, hospitales y salas de conciertos de gran aforo. Todo ello bajo la aplicación de Eurocódigo para España o siguiendo \emph{British Standard}, según las normativas americanas AISC, ASCE y ACI, o el código saudí SBC.
 
-Durante este periodo en la empresa, también ha manifestado interés por las metodologías para cuantificar los impactos ambientales y sostenibilidad de las estructuras. Esto se ha manifestado en la participación en la comisión de sostenibilidad de la Asociación de Consultores de Estructuras (ACE), certificación ENVISION e impartición de cursos.
+\section{Employment history}
+\begin{tabularx}{\linewidth}{lX}
+    2025 - \enspace \dots &
+    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
+    Postdoctoral researcher \\
 
-Estando en la empresa ha dirigido y codirigido diversos trabajos finales de grado y máster. Uno sobre la interacción fluido estructura (FSI) para analizar la dinámica de una cubierta de estadio de fútbol bajo la acción del viento. Otro sobre el comportamiento no lineal del hormigón armado ante solicitaciones reológicas, empleando para ello formulaciones de mezcla serie-paralelo y leyes constitutivas de plasticidad. En el ámbito de la sostenibilidad, un estudio comparativo de emisiones de CO\textsubscript{2}, combinado con un estudio estadístico para analizar la sensibilidad a múltiples parámetros de diseño. Actualmente, dirige otro trabajo final de grado sobre dispositivos microfluídicos de separación y clasificación de partículas.
+    2022 - \enspace \dots &
+    \textbf{Universitat Politècnica de Catalunya (UPC)} - School of Civil Engineering \newline
+    Adjunct lecturer \\ 
 
-Finalmente, mencionar que también tiene conocimientos de ingeniería marítima, ya que estudió dicha especialidad y realizó el proyecto final de carrera en Enginyeria Reventós, diseñando la bocana de Port d'Aro para mejora de agitación. La tesina versó sobre la extensión de la teoría de Timoshenko para vigas laminadas.
+    2022 - 2025 &
+    \textbf{SOCOTEC Spain} - Buildings and cities \newline
+    Specialist Engineer, Head of Development and Innovation \\
 
-% Durante el período de investigación en el CIMNE, trabajó en la estabilización de elementos finitos para ecuaciones diferenciales hiperbólicas, centrándose en la implementación numérica, el acoplamiento multifísico y la resolución multiescala. Estos desarrollos se han aplicado con éxito en diversos proyectos. Además de la estabilización de elementos finitos, también investigó el método de elementos finitos con partículas, tanto con malla móvil como fija.
+    2017 - 2022 &
+    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
+    PhD Candidate (FPI Fellowship) \\
+\end{tabularx}
 
-% Actualmente, trabaja en el departamento de Edificación y Ciudades de Socotec-España. Ha participado en varios proyectos internacionales de diseño estructural, asumiendo responsabilidades en la evaluación de vibraciones y plasticidad. Lidera el departamento de innovación y desarrollo.
 
-% After studying civil engineering and a period studying philosophy and theology in Rome, he began a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined research with work for social purposes at the Montseny Foundation.
+\section{Selected industry projects}
 
-% Durign the research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic differential equations, with focus on numerical implementation, multi-physics coupling, and multi-scale resolution. These developments have been succesfully applied to various projects. In addition to the finite element stabilization, he also researched on the particle finite element method, either with moving mesh and fixed mesh.
+\subsection{Advanced Structural Analysis \& Complex Dynamics}
+\parbox{\linewidth}{
+    Mercury Tower, Malta (2024) Zaha Hadid \newline
+    \emph{Reto}: Evaluación de dinámica estructural para una atracción de "teatro volador" (Flying Theatre) en un rascacielos de diseño singular. \newline
+    \emph{Solución}: Realicé el análisis avanzado de vibraciones para garantizar el cumplimiento de estrictos límites de servicio (SLS) y confort humano bajo cargas dinámicas.}
 
-% Currently, he is working at the Building and Cities department of Socotec-Spain. He has participated in several international projects for structural design, taking on responsibilities of vibration assessment and plasticity. He is leading the innovation and development department.
+\parbox{\linewidth}{
+    New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
+    \emph{Retos}: Diseño de infraestructura crítica sanitaria con requisitos estrictos de aislamiento y seguridad ante accidentes. \newline
+    \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.}
+
+\subsection{Multiphysics and forensic analysis}
+\parbox{\linewidth}{
+    Análisis Termo-mecánico (2023) SOCOTEC Francia \newline
+    Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas.}
+
+\parbox{\linewidth}{
+    Monasterio de Pedralbes (2024) Patrimonio \newline
+    Análisis forense de patologías mediante modelado numérico de la propagación de grietas y diseño de propuestas correctivas para la estabilización de la cúpula histórica (S. XV).}
+
+\parbox{\linewidth}{
+    Residencial Torre Garellano (2025) Arup \newline
+    Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.}
+
+\subsection{Computational Design \& BIM Automation (R\&D)}
+\parbox{\linewidth}{
+    Head of Development \& Innovation (2022-2025) SOCOTEC Spain - Buildings \& cities \newline
+    Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.}
+
+\parbox{\linewidth}{
+    Consultor externo (2024 - 2025) Hormipresa \newline
+    Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.}
+
 
 
 \section{Publicaciones}
