--- a/cv.tex
+++ b/cv.tex
@@ -22,12 +22,11 @@ Birth date: 9/4/1989 &
 
 
 \section{CV Summary}
-Ingeniero de Caminos y Doctor en Mecánica Computacional con una sólida trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
-Experto en cerrar la brecha entre la teoría numérica y la aplicación industrial, con dominio de C++, Python, .NET y APIs de BIM.
+Civil Engineer and PhD in Computational Mechanics with a hybrid background combining advanced structural engineering and software development. Experienced in bridging the gap between numerical theory and industrial application, with proficiency in C++, Python, .NET, and BIM APIs.
 
-Como Responsable de Desarrollo e Innovación en SOCOTEC, lideré la automatización de procesos de diseño y la interconectividad entre modelos de cálculo y BIM.
-Mi formación doctoral en métodos numéricos (FEM, interacción fluido-estructura) me permite abordar problemas complejos de simulación física desde el código fuente hasta la solución práctica.
-Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para nuevos materiales (polímeros electroactivos), busco aplicar mi capacidad técnica en entornos de desarrollo de software de ingeniería de alto nivel.
+As Head of Development and Innovation at SOCOTEC, I spearheaded the automation of design processes and interoperability between calculation models and BIM. My doctoral background in numerical methods (FEM, Fluid-Structure Interaction) enables me to tackle complex physical simulation problems—from source code to practical solutions.
+
+Currently as Postdoctoral Researcher at CIMNE developing formulations for new materials (electroactive polymers), I am seeking to apply my technical expertise within high-level engineering software development environments.
 
 
 \section{Core competencies \& technical skills}
@@ -71,35 +70,35 @@ Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para 
 \subsection{Advanced Structural Analysis \& Complex Dynamics}
 \parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
-    \emph{Reto}: Evaluación de dinámica estructural para una atracción de "teatro volador" (Flying Theatre) en un rascacielos de diseño singular. \newline
-    \emph{Solución}: Realicé el análisis avanzado de vibraciones para garantizar el cumplimiento de estrictos límites de servicio (SLS) y confort humano bajo cargas dinámicas.}
+    \emph{Reto}: Structural dynamic assessment for a "Flying Theatre" attraction within a signature high-rise building. \newline
+    \emph{Solución}: Conducted advanced vibration analysis to ensure strict compliance with Serviceability Limit States (SLS) and human comfort criteria under dynamic loading scenarios.}
 
 \parbox{\linewidth}{
     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
-    \emph{Retos}: Diseño de infraestructura crítica sanitaria con requisitos estrictos de aislamiento y seguridad ante accidentes. \newline
-    \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.}
+    \emph{Retos}: Design of critical healthcare infrastructure with stringent requirements for isolation and safety against accidental loads. \newline
+    \emph{Soluciones}: Led vibration studies for the isolation of highly sensitive medical equipment (MRI/Scanners). Led the analysis of structural robustness against progressive collapse ensuring facility operability.}
 
-\subsection{Multiphysics ans forensic analysis}
+\subsection{Multiphysics and forensic analysis}
 \parbox{\linewidth}{
-    Análisis Termo-mecánico (2023) SOCOTEC Francia \newline
-    Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas.}
-
-\parbox{\linewidth}{
-    Monasterio de Pedralbes (2024) Patrimonio \newline
-    Análisis forense de patologías mediante modelado numérico de la propagación de grietas y diseño de propuestas correctivas para la estabilización de la cúpula histórica (S. XV).}
+    Thermo-mechanical analysis (2023) SOCOTEC Francia \newline
+    Executed coupled CFD-Structural simulations to predict failure modes in industrial warehouses under fire loads, accurately modeling thermo-plastic deformations.}
 
 \parbox{\linewidth}{
-    Residencial Torre Garellano (2025) Arup \newline
-    Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.}
+    PedralbesMonastery (2024) Heritage site \newline
+    Forensic pathology analysis via numerical modeling of crack propagation, followed by the design of corrective measures for the stabilization of the historic 15th-century dome.}
+
+\parbox{\linewidth}{
+    Garellano residential tower (2025) Arup \newline
+    Computational Fluid Dynamics (CFD) analysis to determine wind loads on the facade of a high-rise residential complex.}
 
 \subsection{Computational Design \& BIM Automation (R\&D)}
 \parbox{\linewidth}{
     Head of Development \& Innovation (2022-2025) SOCOTEC Spain - Buildings \& cities \newline
-    Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.}
+    Developed proprietary algorithms (C\# / .NET / Python) to enable direct interoperability between calculation models and BIM software (Revit/Robot), effectively eliminating manual rework and data entry errors.}
 
 \parbox{\linewidth}{
-    Consultor externo (2024 - 2025) Hormipresa \newline
-    Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.}
+    External consultant (2024 - 2025) Hormipresa \newline
+    Implemented automated processes for the review of lifting assemblies in precast concrete elements, optimizing safety standards and significantly reducing technical review times.}
 
 
 \printbibliography[heading={bibintoc}, title={Participation in R+D+i projects}, type=project]
@@ -116,7 +115,7 @@ Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para 
     Pontificia Universtià della Santa Croce, Rome, Italy \\
 
     2007 - 2013 &
-    \textbf{Ingeniero de Caminos, Canales y Puertos} (equivalent to MSc in Civil Engineering) \newline
+    \textbf{Ingeniero de Caminos, Canales y Puertos} (equivalent to MSc in Civil Eng.) \newline
     UPC, Barcelona, Spain \\
 \end{tabularx}
 
